--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,34 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
+  
+  test-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Front-end tests
+          command: |
+            cd frontend
+            npm i
+            npm run test
 
+  test-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Back-end tests
+          command: |
+            cd backend
+            npm i
+            npm run test
 
 workflows:
   default:
