--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,3 +100,9 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
+      - test-frontend:
+          requires:
+            - build-frontend
+      - test-backend:
+          requires:
+            - build-backend
