--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,3 +131,9 @@ workflows:
       - test-backend:
           requires:
             - build-backend
+      - scan-frontend:
+          requires:
+            - build-frontend
+      - scan-backend:
+          requires:
+            - build-backend
