--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,7 @@ jobs:
             cd frontend
             npm i
             npm audit --audit-level=critical
-  scan-frontend:
+  scan-backend:
     docker:
       - image: circleci/node:13.8.0
     steps:
