adding Slack orb to notify on errors

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,6 +110,13 @@ jobs:
             cd frontend
             npm i
             npm audit fix --audit-level=critical --force
+      - slack/notify:
+          event: fail
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1
+          channel: '#cicd-alerts'
   scan-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -135,6 +142,7 @@ workflows:
           requires:
             - build-backend
       - scan-frontend:
+          context: slack-secrets
           requires:
             - build-frontend
       - scan-backend:
