--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,3 +171,12 @@ workflows:
       - scan-backend:
           requires:
             - build-backend
+      - deploy-infra:
+          requires:
+            - test-frontend
+            - test-backend
+            - scan-frontend
+            - scan-backend
+          filters:
+            branches:
+              only: master
