creating the configure-server role for ansible

--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: "configuration play." 
   hosts: web
   user: ubuntu
@@ -25,4 +24,4 @@
     # Add more env vars here
 
   roles:
-    # Your code here
+    - setup
