putting the job in the workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,3 +214,6 @@ workflows:
           filters:
             branches:
               only: master
+      - config-infra:
+          requires:
+            - deploy-infra
