--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,9 +177,9 @@ jobs:
           name: get The backend server ip
           command: |
             cd .circleci/ansible
-            aws ec2 describe-instances\
-            --query 'Reservations[*].Instances[*].PublicIpAddress'\
-            --filters "Name=tag:project,Values=udapeople"\
+            aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters "Name=tag:project,Values=udapeople" \
             --output text >> inventory.txt
       - run:
           name: Configure backend infrastructure
@@ -187,7 +187,7 @@ jobs:
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment:
-          workflow-id: $CIRCLE_WORKFLOW_ID:0:7
+          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   
 workflows:
