adding the job to workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,3 +247,6 @@ workflows:
       - config-infra:
           requires:
             - deploy-infra
+      - run-migration:
+          requires:
+            - config-infra
