--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,10 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add tar gzip ansible
+            apt update
+            apt install tar
+            apt install gzip
+            pip3 install --user ansible
             pip3 install awscli
             
       - run:
