--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,9 +170,9 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apt update
-            apt install tar
-            apt install gzip
+            sudo apt update
+            sudo apt install tar
+            sudo apt install gzip
             pip3 install --user ansible
             pip3 install awscli
             
