--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -19,7 +19,7 @@
 
     - name: "install python for Ansible."
       apt:
-          name: python
+          name: python3.8
           state: present
 
   # Get the environment variables from CircleCI and add to the EC2 instance
