--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -7,7 +7,7 @@
   apt:
     name: nodejs
     state: present
-    
+
 - name: install npm
   apt:
     name: npm
@@ -17,3 +17,17 @@
   npm:
     name: pm2
     global: yes
+
+- name: check envirnoment varible
+  debug:
+    msg: "{{ item }}"
+  with_items:
+    - "{{ TYPEORM_CONNECTION }}"
+    - "{{ TYPEORM_ENTITIES }}"
+    - "{{ TYPEORM_HOST }}"
+    - "{{ TYPEORM_PORT }}"
+    - "{{ TYPEORM_USERNAME }}"
+    - "{{ TYPEORM_PASSWORD }}"
+    - "{{ TYPEORM_DATABASE }}"
+    - "{{ TYPEORM_MIGRATIONS }}"
+    - "{{ TYPEORM_MIGRATIONS_DIR }}"
