--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,7 +218,26 @@ jobs:
               echo "Migration failed"
               exit 1
             fi
-
+  deploy-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    restore_cache:
+      keys: [frontend-build]  
+    steps:
+      - checkout
+      - run:
+          name: install dependencies
+          command: |
+            sudo apt update
+            sudo apt install awscli
+      - run:
+          name: Get backend server ip
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters "Name=tag:project,Values=udapeople" \
+            --output text)
+    
   
 workflows:
   default:
