fixing circleci format

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,7 +253,7 @@ jobs:
             aws s3 cp dist s3//udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy-environment:
           workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migration:
+      - revert-migrations:
           workflow-id: migrati${CIRCLE_WORKFLOW_ID:0:7}
   
 workflows:
