--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,6 +209,7 @@ jobs:
             npm i
             npm fund
             npm audit fix --audit-level=critical --force
+            npm run build
             npm run migrations > migration_dump.log
       - run:
           name: Check if migration is successful
