--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,9 +207,7 @@ jobs:
           command: |
             cd backend
             npm i
-            npm fund
-            npm audit fix --audit-level=critical --force
-            npm run build
+            npm run premigrations
             npm run migrations > migration_dump.log
       - run:
           name: Check if migration is successful
