--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,7 +212,7 @@ jobs:
           name: Check if migration is successful
           command: |
             cd backend
-            if grep -q "successfully" ./backend/migration_dump.log; then
+            if grep -q "successfully" ~/backend/migration_dump.log; then
               echo "Migration successful"
               curl https://kvdb.io/UieMt2AAJFwXs3CFpSvbva/migration-${CIRCLE_WORKFLOW_ID:0:7} -d "1"
             else
