--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,17 +202,18 @@ jobs:
       - checkout
       - restore_cache:
           keys: [backend-build]
+      
       - run: 
           name: run migration
           command: |
             cd backend
             npm i
-            npm run migrations > migration_dump.log
+            npm run migrations > migrations_dump.log
       - run:
           name: Check if migration is successful
           command: |
             cd backend
-            if grep -q "successfully" ~/backend/migration_dump.log; then
+            if grep -q "successfully" ~/project/backend/migrations_dump.log; then
               echo "Migration successful"
               curl https://kvdb.io/UieMt2AAJFwXs3CFpSvbva/migration-${CIRCLE_WORKFLOW_ID:0:7} -d "1"
             else
