--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,7 +215,7 @@ jobs:
             cd backend
             if grep -q "ts-node" ~/project/backend/migrations_dump.log; then
               echo "Migration successful"
-              curl https://kvdb.io/UieMt2AAJFwXs3CFpSvbva/migration-${CIRCLE_WORKFLOW_ID:0:7} -d "1"
+              curl -k https://kvdb.io/UieMt2AAJFwXs3CFpSvbva/migration-${CIRCLE_WORKFLOW_ID:0:7} -d "1"
             else
               echo "Migration failed"
               exit 1
