--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ commands:
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
             SUCCESS=$(curl --insecure  https://kvdb.io/UieMt2AAJFwXs3CFpSvbva/migration-<< parameters.workflow_id >>)
-            if[[ $SUCCESS == 1 ]]; 
+            if [[ $SUCCESS == 1 ]]; 
             then
                cd ~/project/backend
                npm install
@@ -249,7 +249,7 @@ jobs:
             npm i
             npm run build
             tar -czvf artifact-${CIRCLE_WORKFLOW_ID:0:7}.tar.gz dist
-            aws s3 cp ~/project/frontend/dist s3//udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy-environment:
           workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
