getting the backend IP

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -283,7 +283,7 @@ jobs:
             aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --filters "Name=tag:project,Values=udapeople" \
-            --output text >> ~/circleci/ansible/inventory.txt 
+            --output text >> .circleci/ansible/inventory.txt 
             cat inventory.txt
       - run:
           name: deploy backend
