--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -284,7 +284,7 @@ jobs:
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --filters "Name=tag:project,Values=udapeople" \
             --output text >> .circleci/ansible/inventory.txt 
-            cat inventory.txt
+            cat .circleci/ansible/inventory.txt
       - run:
           name: deploy backend
           command: |
