--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -15,6 +15,7 @@
   unarchive:
     src: artifact.tar.gz
     dest: ~/backend
+    remote_src: yes
 
 - name: "install node dependencies"
   command: npm install
