--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -292,7 +292,7 @@ jobs:
             npm run build
             cd ..
             tar -czf art.tar.gz ./backend
-            cp ./artifact.tar.gz ./.circleci/ansible/roles/deploy/files
+            cp artifact.tar.gz ../.circleci/ansible/roles/deploy/files
       - run:
           name: deploy backend
           command: |
