printing the working directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -293,11 +293,12 @@ jobs:
             cd ..
             tar -czf artifact.tar.gz ./backend
             ls
-            cp artifact.tar.gz .circleci/ansible/roles/deploy/files
+            cp ./artifact.tar.gz .circleci/ansible/roles/deploy/files
       - run:
           name: check the content of ansible 
           command: |
-            cd .circleci/ansible/roles/deploy/files
+            pwd
+            cd ~/project/.circleci/ansible/roles/deploy/files
             ls
       - run:
           name: deploy backend
