#hotfix: adding a output on ansible task

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -15,6 +15,11 @@
   unarchive:
     src: artifact.tar.gz
     dest: ~/backend
+  register: unarchive_result
+
+- name: "print the stdout"
+  debug:
+    msg: "{{ unarchive_result.stdout }}"
     
 - name: "install node dependencies"
   command: npm install
