only run the pipe on the master branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -352,8 +352,14 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
+      - build-frontend:
+          filters:
+            branches:
+              only: master
+      - build-backend:
+          filters:
+            branches:
+              only: master
       - test-frontend:
           requires:
             - build-frontend
