--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -16,6 +16,11 @@
       wait_for_connection:
         delay: 50
         timeout: 300
+    
+    - name: "install python for Ansible."
+      apt: 
+        name: python3.8
+        state: present
 
 
   # Get the environment variables from CircleCI and add to the EC2 instance
