--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -270,11 +270,13 @@ jobs:
           name: install dependencies
           command: |
             sudo apt update
-            sudo apt install awscli
-            sudo apt install tar
-            sudo apt install gzip
-            sudo apt install python3-pip
+            sudo apt install -y awscli
+            sudo apt install -y tar
+            sudo apt install -y gzip
+            sudo apt install -y python3.9
+            sudo apt install -y python3-pip
             pip3 install --user ansible
+            ansible --version
       - run:
           name: get backend ip
           command: |
