--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -259,7 +259,7 @@ jobs:
   
   deploy-backend:
     docker:
-      - image: circleci/node:13.8.0
+      - image: python:3.8-alpine3.17
     steps:
       - checkout
       - add_ssh_keys:
@@ -269,14 +269,10 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            sudo apt update
-            sudo apt install -y awscli
-            sudo apt install -y tar
-            sudo apt install -y gzip
-            sudo apt install -y python3.9
-            sudo apt install -y python3-pip
-            pip3 install --user ansible
-            ansible --version
+            apk add --update ansible
+            apk add --update nodejs npm
+            apk add curl
+            pip3 install awscli
       - run:
           name: get backend ip
           command: |
