--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,10 +299,10 @@ jobs:
             echo "Content of inventory.txt"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment:
-          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations:
-          workflow_id: migration-${CIRCLE_WORKFLOW_ID:0:7}
+      # - destroy-environment:
+      #     workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # - revert-migrations:
+      #     workflow_id: migration-${CIRCLE_WORKFLOW_ID:0:7}
   
   smoke-test:
     docker:
