--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,34 +1,34 @@
-- name: upgrade and update packages
+- name: upgrade and  update packages
   become: true
-  apt:
-    update_cache: yes
-    upgrade: yes
-
-- name: copy backend files
-  become: true
-  copy:
-    src: artifact.tar.gz
-    dest: ~/workspace/
-  
-- name: unzip backend files
-  become: true
+  apt: 
+   update_cache: yes
+- name:  create backend directory
+  file:
+    path: ~/backend
+    state: directory
+     
+- name: "unarchive backend directory"
   unarchive:
-    src: ~/workspace/artifacts.tar.gz
-    dest: ~/workspace/
-    remote_src: yes
+    src: artifact.tar.gz
+    dest: ~/backend
+
+- name: "install node dependencies"
+  command: npm i 
+  args:
+    chdir: ~/backend
 
 - name: install ans start app
-  command: pm2 start main.js
+  command:  pm2 start main.js
   args:
     chdir: ~/backend/dist
   environment:
-    ENVIRONMENT: production
-    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
-    TYPEORM_MIGRATIONS_DIR: "./migrations"
-    TYPEORM_MIGRATIONS: "./migrations/*.js"
-    TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
-    TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
-    TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
-    TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
-    TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-    TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+      ENVIRONMENT: production
+      TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+      TYPEORM_MIGRATIONS_DIR: "./migrations"
+      TYPEORM_MIGRATIONS: "./migrations/*.js"
+      TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
+      TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
+      TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
+      TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
+      TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
+      TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
