--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -4,7 +4,7 @@
    update_cache: yes
 - name:  create backend directory
   file:
-    path: ~/backend
+    path: "$HOME/backend"
     state: directory
      
 - name: "unarchive backend directory"
