--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -256,10 +256,10 @@ jobs:
             npm run build
             tar -czvf artifact-${CIRCLE_WORKFLOW_ID:0:7}.tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy-environment:
-          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations:
-          workflow_id: migration-${CIRCLE_WORKFLOW_ID:0:7}
+      # - destroy-environment:
+      #     workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # - revert-migrations:
+      #     workflow_id: migration-${CIRCLE_WORKFLOW_ID:0:7}
   
   deploy-backend:
     docker:
@@ -299,10 +299,10 @@ jobs:
             echo "Content of inventory.txt"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment:
-          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations:
-          workflow_id: migration-${CIRCLE_WORKFLOW_ID:0:7}
+      # - destroy-environment:
+      #     workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # - revert-migrations:
+      #     workflow_id: migration-${CIRCLE_WORKFLOW_ID:0:7}
   
   smoke-test:
     docker:
