changing the permission of nvm

--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -15,7 +15,7 @@
 - name: change permission
   become: yes
   file:
-    path: "$HOME/.nvm"
+    path: "$HOME/.nvm/nvm.sh"
     mode: "0775"
     state: file
     
